fixed location history cards

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
             <input
               type="email"
               class="form-control location-search"
-              id="inputEmail3"
+              id="inputLocation"
               placeholder="San Francisco"
             />
           </div>
-          <button type="submit" class="btn btn-primary">Search</button>
-          <h3>San Francisco</h3>
+          <button type="submit" id="submit-btn" class="btn btn-primary">Search</button>
+          <!-- Location history cards -->
+          <div id="cards"></div>
         </div>
         <div class="col-8">
             2 of 3 (wider)
