fixed cards displaying 5-day forecast

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         <div id="weather-detail" class="col-9 border border-dark text-left">
           <div class="row">
             <div class="col-12">
-              <h3 id="city-name" class="text-left mt-2"></h3>
+              <h3 id="city-name" class="text-left mt-2">
+              <div>
+                <img id="weatherImg" src="" alt="Weather symbol" />
+              </div>
+            </h3>
               <h5 id="temperature" class="text-left mt-2"></h5>
               <h5 id="wind" class="text-left mt-2"></h5>
               <h5 id="humidity" class="text-left mt-2"></h5>
