working on the image in the main forecast box

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <div class="col-12">
               <h3 id="city-name" class="text-left mt-2">
               <div>
-                <img id="weatherImg" src="" alt="Weather symbol" />
+                <img id="weatherImg0" src="" alt="" />
               </div>
             </h3>
               <h5 id="temperature" class="text-left mt-2"></h5>
