--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
         <div id="weather-detail" class="col-9 border border-dark text-left">
           <div class="row">
             <div class="col-12">
-              <h3 id="city-name" class="text-left mt-2">
-              <div>
-                <img id="weatherImg0" src="" alt="" />
-              </div>
-            </h3>
+              <div class="display_flex">
+              <h3 id="city-name" class="text-left mt-2"></h3>
+            <img id="weatherImg0" src="" alt="" />
+            </div>
               <h5 id="temperature" class="text-left mt-2"></h5>
               <h5 id="wind" class="text-left mt-2"></h5>
               <h5 id="humidity" class="text-left mt-2"></h5>
